--- a/personal_website/homepage/templates/homepage/contact.html
+++ b/personal_website/homepage/templates/homepage/contact.html
@@ -1,1 +1,7 @@
-<h1>this is the contact page</h1>
+{% extends "homepage/header.html" %}
+{% block content %}
+  <h1>this is the contact page</h1>
+  {% for c in contact_info %}
+    {{c}}<br>
+  {% endfor %}
+{% endblock %}
